<resources>
    <string name="app_name">Restaurant</string>
    <string name="title_activity_home">Restaurant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="update_infomation">Update Infomation</string>
    <string name="sign_out">Sign Out</string>
    <string name="nearby_restaurant">Near By Restaurant</string>
    <string name="order_history">Order History</string>
    <string name="our_specialized">Our Specialized</string>
    <string name="money_sign">$</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="view_cart">View Cart</string>
    <string name="add_on">Addon</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="your_order">Your Order</string>
    <string name="title_activity_nearby_restaurant">Map</string>
    <string name="menu_fav">Favorite</string>
    <string name="place_order">Place Order</string>
    <string name="update_information">Update Information</string>

</resources>
