<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FoodDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/button_color"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:titleTextColor="@android:color/white" />

            </com.google.android.material.appbar.AppBarLayout>

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/img_food_detail"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="30dp"
                    android:paddingTop="30dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="60dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="20dp">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_attach_money_black_24dp" />

                            <TextView
                                android:id="@+id/txt_money"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="200"
                                android:textColor="@color/button_color"
                                android:textSize="20sp" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunitoitalic"
                            android:text="@string/size"
                            android:textSize="16sp" />

                        <RadioGroup
                            android:id="@+id/rdi_group_size"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="3">


                        </RadioGroup>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.github.florent37.expansionpanel.ExpansionHeader
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:expansion_headerIndicator="@id/headerIndicator"
                            app:expansion_layout="@id/expansionLayout"
                            app:expansion_toggleOnClick="true">

                            <!-- HEADER -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/nunitoitalic"
                                android:text="@string/add_on"
                                android:textSize="16sp" />

                            <!-- HEADER INDICATOR -->
                            <ImageView
                                android:id="@+id/headerIndicator"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|right"
                                android:adjustViewBounds="true"
                                app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />

                        </com.github.florent37.expansionpanel.ExpansionHeader>

                        <com.github.florent37.expansionpanel.ExpansionLayout
                            android:id="@+id/expansionLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recycler_addon"
                                android:layout_width="match_parent"
                                android:layout_height="300dp" />

                        </com.github.florent37.expansionpanel.ExpansionLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunitoitalic"
                            android:text="@string/description"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_price"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="71dp"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:weightSum="6">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="2"
                        android:src="@mipmap/ic_cart_round" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="3dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="@font/nunitobold"
                            android:text="Total Cost"
                            android:textColor="#151515"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/txt_place_total_price"
                            android:layout_width="133dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="@font/nunitobold"
                            android:text="0.0"
                            android:textColor="@color/button_color"
                            android:textSize="25sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right">

                    <Button
                        android:id="@+id/btn_view_cart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="3"
                        android:background="@drawable/gradient_color"
                        android:fontFamily="@font/nunitobold"
                        android:text="VIEW CART"
                        android:textColor="@android:color/white" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

<!--        <Button-->
<!--            android:id="@+id/btn_view_cart"-->
<!--            android:text="@string/view_cart"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            android:layout_margin="8dp"-->
<!--            android:fontFamily="@font/nunitobold"-->
<!--            android:background="@drawable/gradient_color"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:backgroundTint="@color/colorAccent"
            android:layout_gravity="center|center_vertical"
            android:src="@drawable/ic_shopping_cart_white_24dp" />
    </FrameLayout>

</RelativeLayout>